@@ -1,3 +1,9 @@
+2002-06-10 Erwann Chenede - <erwann.chenede@sun.com>
+
+        * src/keybindings.c : (handle_close_window, handle_minimize_window)
+	verify the active window has the appropriate close/minimize function
+	before closing or minimizing the window.
+			
 2002-06-09  Havoc Pennington  <hp@pobox.com>
 
 	* configure.in: 2.3.987
